--- a/CgenCmakeGui/OptionEditView.xaml
+++ b/CgenCmakeGui/OptionEditView.xaml
@@ -1,15 +1,13 @@
-﻿<Window x:Class="CgenCmakeGui.OptionsView"
+﻿<Window x:Class="CgenCmakeGui.OptionEditView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CgenCmakeGui"
         mc:Ignorable="d"
-        Title="OptionsView" Height="600" Width="1000">
-    <Canvas x:Name="mypanel">
+        Title="OptionEditView" Height="1200" Width="1800">
+    <Grid>
+        <Canvas x:Name="MyCanvas"/>
 
-
-    </Canvas>
-
-
+    </Grid>
 </Window>
